--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CNN=mongodb+srv://adminatlas:googletraductor@cluster0.f5zaequ.mongodb.net/hospitaldb
+JWT_SECRET=2020.F3B.G1TL3NS.abc@
