Autenticación con Google

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 DB_CNN=mongodb+srv://adminatlas:googletraductor@cluster0.f5zaequ.mongodb.net/hospitaldb
 JWT_SECRET=2020.F3B.G1TL3NS.abc@
+
+GOOGLE_ID=904933191644-inv3r28er0j150pbo13m4h38utnamfvh.apps.googleusercontent.com
+GOOGLE_SECRET=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
