--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "fs-extra": "^11.1.0",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "uuid": "^9.0.0"
